--- a/MyDocument/jewellyonlineshop/head1.html
+++ b/MyDocument/jewellyonlineshop/head1.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8" />
-<title>BB Jewellery Online Store</title>
+<title>Moug Keng Jewelly</title>
 
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
@@ -54,7 +54,7 @@
 	text-align:center;
 	border:1px solid #999;
 	border-radius:5px;
-	height:10%;
+	height:20%;
 	width:10%;
 	display:none;/*IE6*/
 	margin-left:5%;
@@ -83,7 +83,7 @@ function showSearch()
 
 function showAddress()
 {
-	$('#AddressDiv').show(100);
+	$('#AddressDiv').show(200);
 	//$('#AddressDiv').load('login.php');
 }
 
