--- a/MyDocument/jewellyonlineshop/section.html
+++ b/MyDocument/jewellyonlineshop/section.html
@@ -15,6 +15,10 @@
 			<ul class="slides">
 				<li><img src="image/banner1-960x300.jpg" alt="Banner" /></li>
 				<li><img src="image/banner2-960x300.jpg" alt="Banner" /></li>
+				<li><img src="banner/banner-slide.jpg" alt="Banner" /></li>
+				<li><img src="banner/banner-slide1.jpg" alt="Banner" /></li>
+				<li><img src="banner/banner-slide3.jpg" alt="Banner" /></li>
+				<li><img src="banner/banner-slide2.jpg" alt="Banner" /></li>
 			</ul>
 		</div>
 		<!--Flexslider End-->
